fix: show pending notifications after screen unlock

This makes sure that notifications are shown to the user after a screen unlock
or after exiting fullscreen mode.

Bug: 899106
Change-Id: Iac5efa2f784e2681a41357bf7aa8f5da33830c16
Reviewed-on: https://chromium-review.googlesource.com/c/1315567
Commit-Queue: Richard Knoll <knollr@chromium.org>
Reviewed-by: Peter Beverloo <peter@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605380}
Former-commit-id: c812b6465b60bdbf5ca43f18457c9ccfcc65db36