chrome/browser/notifications/popups_only_ui_controller.h
@@ -30,7 +30,7 @@ class PopupsOnlyUiController : public message_center::MessageCenterObserver {
   PopupsOnlyUiController();
   ~PopupsOnlyUiController() override;
 
-  // UiDelegate implementation.
+  // MessageCenterObserver:
   void OnNotificationAdded(const std::string& notification_id) override;
   void OnNotificationRemoved(const std::string& notification_id,
                              bool b_user) override;
@@ -39,6 +39,8 @@ class PopupsOnlyUiController : public message_center::MessageCenterObserver {
       const std::string& notification_id,
       const base::Optional<int>& button_index,
       const base::Optional<base::string16>& reply) override;
+  void OnBlockingStateChanged(
+      message_center::NotificationBlocker* blocker) override;
 
   Delegate* delegate() { return delegate_.get(); }
   bool popups_visible() const { return popups_visible_; }
