ui/message_center/views/message_popup_collection.cc
@@ -171,6 +171,11 @@ void MessagePopupCollection::OnCenterVisibilityChanged(Visibility visibility) {
   Update();
 }
 
+void MessagePopupCollection::OnBlockingStateChanged(
+    NotificationBlocker* blocker) {
+  Update();
+}
+
 void MessagePopupCollection::AnimationEnded(const gfx::Animation* animation) {
   Update();
 }
